# hexpatch

./: .gitignore  CMakeLists.txt  hex_patch.c  hex_patch.h  hexpatch.c  hexpatch.h  test.c
